bin_PROGRAMS = moto-boot-usb rqhw_decode cdt_parse

moto_boot_usb_CFLAGS = -std=c99 -pedantic -Wall -Wextra -Wno-variadic-macros
moto_boot_usb_SOURCES = moto-boot-usb.c
moto_boot_usb_LDADD = $(USB_LIBS)

rqhw_decode_CFLAGS = -std=c99 -pedantic -Wall -Wextra
rqhw_decode_SOURCES = rqhw_decode.c

cdt_parse_CFLAGS = -std=c99 -pedantic -Wall -Wextra
cdt_parse_SOURCES = cdt_parse.c
